[metadata]
name = syms
author = Reuben Thomas
author_email = rrt@sc3d.org
home_page = https://github.com/rrthomas/syms
version = 1.0
description = List symbols in input
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL v3 or later
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3

[options]
scripts = syms
python_requires = >=3.6
install_requires = regex
